# rust-restful

./: Cargo.toml
migrations/2019-10-12-094721_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/handlers/: posts.rs
src/models/: post.rs
