[package]
name = "actix_diesel_crud"
version = "0.1.0"
authors = ["asadnaufal <asadnaufall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono"]}
dotenv = "0.9.0"
actix-web = "1.0"
serde = "1.0.101"
serde_json = "1.0"
chrono = { version = "0.4.9", features = ["serde"] }